# Football-Club

./: .gitignore  .pre-commit-config.yaml  README.md  project-roadmap.md
backend/: file::memory:  pyproject.toml
backend/app/: db.py  main.py  models.py  scheduler.py  schema.py  schemas.py
backend/app/api/: auth.py  clubs.py  match_templates.py  matches.py  members.py  memberships.py  notifications.py  participations.py
backend/app/core/: auth.py  config.py  dependencies.py  security_fields.py  utils.py
backend/app/repositories/: club_repository.py  match_repository.py  match_template_repository.py  member_repository.py  membership_repository.py  notification_repository.py  participation_repository.py  season_repository.py
backend/app/services/: auth_service.py  club_service.py  kakao_service.py  match_service.py  match_template_service.py  member_service.py  membership_service.py  notification_service.py  participation_service.py  season_service.py
backend/tests/: conftest.py  test_club.py  test_match.py  test_match_template.py  test_member.py  test_membership.py  test_models.py  test_notification.py  test_participation.py  test_season.py
football-club/: project-roadmap.md
football-club/backend/: pyproject.toml  pyproject.toml.bak  requirements.txt  vercel.json
football-club/frontend/: package-lock.json
frontend/: .prettierrc  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: AuthProvider.tsx  CreateManualMatchModal.tsx  CreateMatchModal.tsx  EditMatchModal.tsx  ManagerMatchDetailModal.tsx  MatchCard.tsx  (+2 more)
(+19 files in other folders)
